--- a/gdv4002-base1/gdv4002-base1/gdv4002-base1.vcxproj
+++ b/gdv4002-base1/gdv4002-base1/gdv4002-base1.vcxproj
@@ -151,6 +151,15 @@ copy "$(SolutionDir)Libs\FreeImage\Wrapper\FreeImagePlus\dist\x64\FreeImagePlus.
     <ClInclude Include="GUObject.h" />
     <ClInclude Include="texture_loader.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="Resources\Textures\Asteroid1.png" />
+    <Image Include="Resources\Textures\Asteroid2.png" />
+    <Image Include="Resources\Textures\Asteroid3.png" />
+    <Image Include="Resources\Textures\CargoCrate.png" />
+    <Image Include="Resources\Textures\ExtraLifeCrate.png" />
+    <Image Include="Resources\Textures\SpaceShip.png" />
+    <Image Include="Resources\Textures\SpaceShipAccelerating.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
