Sprite-work and basic keyboard-handler and ship class work

--- a/gdv4002-base1/gdv4002-base1/gdv4002-base1.vcxproj.filters
+++ b/gdv4002-base1/gdv4002-base1/gdv4002-base1.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="GameObject2D.cpp">
       <Filter>Engine</Filter>
     </ClCompile>
+    <ClCompile Include="PlayerShip.cpp">
+      <Filter>Engine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine.h">
@@ -62,8 +65,14 @@
     <ClInclude Include="GameObject2D.h">
       <Filter>Engine</Filter>
     </ClInclude>
+    <ClInclude Include="PlayerShip.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <Image Include="Resources\Textures\UFOFire.png">
+      <Filter>Resource Files</Filter>
+    </Image>
     <Image Include="Resources\Textures\Asteroid1.png">
       <Filter>Resource Files</Filter>
     </Image>
@@ -73,16 +82,82 @@
     <Image Include="Resources\Textures\Asteroid3.png">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="Resources\Textures\CargoCrate.png">
+    <Image Include="Resources\Textures\Ship.png">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="Resources\Textures\ExtraLifeCrate.png">
+    <Image Include="Resources\Textures\ShipFire.png">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="Resources\Textures\SpaceShip.png">
+    <Image Include="Resources\Textures\ShipFireShield.png">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="Resources\Textures\SpaceShipAccelerating.png">
+    <Image Include="Resources\Textures\ShipForward.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\Textures\ShipForwardFire.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\Textures\ShipForwardFireShield.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\Textures\ShipForwardShield.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\Textures\ShipLeft.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\Textures\ShipLeftFire.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\Textures\ShipLeftFireShield.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\Textures\ShipLeftShield.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\Textures\ShipRight.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\Textures\ShipRightFire.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\Textures\ShipRightFireShield.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\Textures\ShipRightShield.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\Textures\ShipShield.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\Textures\UFO.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\Textures\UFODamage.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\Textures\LifePickup.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\Textures\PowerUpCrate.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\Textures\ScatterPickup.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\Textures\ShieldPickup.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\Textures\ThrusterPickup.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\Textures\LifeCrate.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\Textures\ShipDestroy2.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\Textures\ShipDestroy1.png">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
