--- a/gdv4002-base1/gdv4002-base1/gdv4002-base1.vcxproj
+++ b/gdv4002-base1/gdv4002-base1/gdv4002-base1.vcxproj
@@ -140,6 +140,7 @@ copy "$(SolutionDir)Libs\FreeImage\Wrapper\FreeImagePlus\dist\x64\FreeImagePlus.
     <ClCompile Include="GUMemory.cpp" />
     <ClCompile Include="GUObject.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="PlayerShip.cpp" />
     <ClCompile Include="texture_loader.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -149,16 +150,40 @@ copy "$(SolutionDir)Libs\FreeImage\Wrapper\FreeImagePlus\dist\x64\FreeImagePlus.
     <ClInclude Include="GUClock.h" />
     <ClInclude Include="GUMemory.h" />
     <ClInclude Include="GUObject.h" />
+    <ClInclude Include="PlayerShip.h" />
     <ClInclude Include="texture_loader.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Resources\Textures\Asteroid1.png" />
     <Image Include="Resources\Textures\Asteroid2.png" />
     <Image Include="Resources\Textures\Asteroid3.png" />
-    <Image Include="Resources\Textures\CargoCrate.png" />
-    <Image Include="Resources\Textures\ExtraLifeCrate.png" />
-    <Image Include="Resources\Textures\SpaceShip.png" />
-    <Image Include="Resources\Textures\SpaceShipAccelerating.png" />
+    <Image Include="Resources\Textures\LifeCrate.png" />
+    <Image Include="Resources\Textures\LifePickup.png" />
+    <Image Include="Resources\Textures\PowerUpCrate.png" />
+    <Image Include="Resources\Textures\ScatterPickup.png" />
+    <Image Include="Resources\Textures\ShieldPickup.png" />
+    <Image Include="Resources\Textures\Ship.png" />
+    <Image Include="Resources\Textures\ShipDestroy1.png" />
+    <Image Include="Resources\Textures\ShipDestroy2.png" />
+    <Image Include="Resources\Textures\ShipFire.png" />
+    <Image Include="Resources\Textures\ShipFireShield.png" />
+    <Image Include="Resources\Textures\ShipForward.png" />
+    <Image Include="Resources\Textures\ShipForwardFire.png" />
+    <Image Include="Resources\Textures\ShipForwardFireShield.png" />
+    <Image Include="Resources\Textures\ShipForwardShield.png" />
+    <Image Include="Resources\Textures\ShipLeft.png" />
+    <Image Include="Resources\Textures\ShipLeftFire.png" />
+    <Image Include="Resources\Textures\ShipLeftFireShield.png" />
+    <Image Include="Resources\Textures\ShipLeftShield.png" />
+    <Image Include="Resources\Textures\ShipRight.png" />
+    <Image Include="Resources\Textures\ShipRightFire.png" />
+    <Image Include="Resources\Textures\ShipRightFireShield.png" />
+    <Image Include="Resources\Textures\ShipRightShield.png" />
+    <Image Include="Resources\Textures\ShipShield.png" />
+    <Image Include="Resources\Textures\ThrusterPickup.png" />
+    <Image Include="Resources\Textures\UFO.png" />
+    <Image Include="Resources\Textures\UFODamage.png" />
+    <Image Include="Resources\Textures\UFOFire.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
