--- a/gdv4002-base1/gdv4002-base1/gdv4002-base1.vcxproj.filters
+++ b/gdv4002-base1/gdv4002-base1/gdv4002-base1.vcxproj.filters
@@ -44,28 +44,28 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Engine.h">
-      <Filter>Engine</Filter>
-    </ClInclude>
-    <ClInclude Include="GUClock.h">
-      <Filter>Engine</Filter>
-    </ClInclude>
-    <ClInclude Include="GUMemory.h">
-      <Filter>Engine</Filter>
-    </ClInclude>
-    <ClInclude Include="GUObject.h">
-      <Filter>Engine</Filter>
+    <ClInclude Include="PlayerShip.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="texture_loader.h">
-      <Filter>Engine</Filter>
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GUObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GUMemory.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GUClock.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GraphicsCore.h">
-      <Filter>Engine</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GameObject2D.h">
-      <Filter>Engine</Filter>
-    </ClInclude>
-    <ClInclude Include="PlayerShip.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
