One issue left before completion!

--- a/gdv4002-base1/gdv4002-base1/gdv4002-base1.vcxproj.filters
+++ b/gdv4002-base1/gdv4002-base1/gdv4002-base1.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="ReferencePoint.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Projectile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PlayerShip.h">
@@ -78,6 +81,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ReferencePoint.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Projectile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -170,6 +176,12 @@
       <Filter>Resource Files</Filter>
     </Image>
     <Image Include="Resources\Textures\ReferencePointMarker.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\Textures\Background.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\Textures\LaserProjectile.png">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
