--- a/gdv4002-base1/gdv4002-base1/gdv4002-base1.vcxproj
+++ b/gdv4002-base1/gdv4002-base1/gdv4002-base1.vcxproj
@@ -142,6 +142,7 @@ copy "$(SolutionDir)Libs\FreeImage\Wrapper\FreeImagePlus\dist\x64\FreeImagePlus.
     <ClCompile Include="GUObject.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PlayerShip.cpp" />
+    <ClCompile Include="Projectile.cpp" />
     <ClCompile Include="ReferencePoint.cpp" />
     <ClCompile Include="texture_loader.cpp" />
   </ItemGroup>
@@ -154,6 +155,7 @@ copy "$(SolutionDir)Libs\FreeImage\Wrapper\FreeImagePlus\dist\x64\FreeImagePlus.
     <ClInclude Include="GUMemory.h" />
     <ClInclude Include="GUObject.h" />
     <ClInclude Include="PlayerShip.h" />
+    <ClInclude Include="Projectile.h" />
     <ClInclude Include="ReferencePoint.h" />
     <ClInclude Include="texture_loader.h" />
   </ItemGroup>
@@ -161,6 +163,8 @@ copy "$(SolutionDir)Libs\FreeImage\Wrapper\FreeImagePlus\dist\x64\FreeImagePlus.
     <Image Include="Resources\Textures\Asteroid1.png" />
     <Image Include="Resources\Textures\Asteroid2.png" />
     <Image Include="Resources\Textures\Asteroid3.png" />
+    <Image Include="Resources\Textures\Background.png" />
+    <Image Include="Resources\Textures\LaserProjectile.png" />
     <Image Include="Resources\Textures\LifeCrate.png" />
     <Image Include="Resources\Textures\PowerUpCrate.png" />
     <Image Include="Resources\Textures\ReferencePointMarker.png" />
